--- a/Assignments.html
+++ b/Assignments.html
@@ -38,8 +38,8 @@
     <p>Haye Asxaabta halkaan waxaad ku soo gudbin kartaa Assignmentska laysku diro oo theoryga waxaadna u soo gudbin kartaa labo qabood By individuals ama by grouping marka ay tahay by grouping kaliya waxaa soo gudbinaya Assignmentiga leaderka , haday qof qof ay tahayna waad soo gudbin kartaan adigoo ku dhufanaya <b>buttonada</b> hoose. 👇</p>
      <small >NB: Hadii Assignmentiga aad submit soo dhahdo Mar 2aad kuuma ogolaanayo make sure intaadan soo dirin masuul hadaad ubaahato inaad soo edit garayso Mar 2aadna aad soo dirto <b>addminka </b> laxiriir.</small>
   
-  <a href="#" class="btn-1">By individuals</a>
-  <a href="#" class="btn-1">By grouping</a>
+  <a href="  https://forms.gle/NoF47Jx8mcbssmsN8  " class="btn-1">By individuals</a>
+  <a href="https://forms.gle/gPykPcKL9jRo65Mq5" class="btn-1">By grouping</a>
   
   </div>
   
