--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <a href="about.html">AboutUs</a>
     <a href="Assignments.html">Assignments</a>
     <a href="Lessons.html">Lessons</a>
-    <a href="Reg.html">RegisterNow</a>
+    <a href="#" id="reg">RegisterNow</a>
   </div>
   
   
