--- a/Lessons.html
+++ b/Lessons.html
@@ -29,7 +29,7 @@
     <a href="about.html">AboutUs</a>
     <a href="Assignments.html">Assignments</a>
     <a href="Lessons.html">Lessons</a>
-  <a href="#" id="reg">RegisterNow</a>
+  <a href="Reg.html" id="reg">RegisterNow</a>
   </div>
   <div class="Lessons">
      <h3 ><span class="height">Download</span> Books or pptx</h3>
