--- a/Reg.html
+++ b/Reg.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" title="" type="" />
