--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
     <a href="about.html">AboutUs</a>
     <a href="Assignments.html">Assignments</a>
     <a href="Lessons.html">Lessons</a>
-    <a href="Reg.html" id="reg">RegisterNow</a>
+    <!--<a href="Reg.html" id="reg">RegisterNow</a>-->
   </div>
     <div class="right">
     <h2 class="title"><span class="about">About us</span></h2>
