--- a/Assignments.html
+++ b/Assignments.html
@@ -30,7 +30,7 @@
     <a href="about.html">AboutUs</a>
     <a href="Assignments.html">Assignments</a>
     <a href="Lessons.html">Lessons</a>
-     <a href="Reg.html" id="reg">RegisterNow</a> 
+     <!--<a href="Reg.html" id="reg">RegisterNow</a>--> 
   </div>
   
   <!-- Assignments section-->
