--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,8 @@
 
 .vl {
   border-left: 6px solid green;
-  height: 200px;
+  right:100px;
+  height: 230px;
 
 </style >
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
