--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,9 @@
 <style>
 
 .vl {
-  border-left: 6px solid green;
-  right:100px;
-  height: 230px;
+  border-bottom: 4px solid green;
+
+  height: 50px;
 
 </style >
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,9 +50,9 @@
    
      
    
-    <h2 class="title ">Mahad Abdullahi</h2>
+    <h2 class="title vl">Mahad Abdullahi</h2>
     <p class="sub-title">Class Monitor</p>
-    <p class="vl">Hello Asc dhamaan asxaabta soo dhawaada kani waa pagekeenii rasmiga ah, pagekan waxaan ku soo gudbin doonaa dhamaan cashirada aan qaadano iyagoo pdf iyo powerpoint ah, si la mid ah waxaadna ku soo diri doontaan assignmentiyada laysku diro kuwa theoryga ah hada kadib ha I waydiin wax <b>pptx </b> iyo <b>pdf</b> ee quseeya cashirada aan qaadano waxaa si toos ah kala dagi kartaa pagekan adiga oo ku dhufanaya buttonka kore👆 ee lessons ka </p>
+    <p class="">Hello Asc dhamaan asxaabta soo dhawaada kani waa pagekeenii rasmiga ah, pagekan waxaan ku soo gudbin doonaa dhamaan cashirada aan qaadano iyagoo pdf iyo powerpoint ah, si la mid ah waxaadna ku soo diri doontaan assignmentiyada laysku diro kuwa theoryga ah hada kadib ha I waydiin wax <b>pptx </b> iyo <b>pdf</b> ee quseeya cashirada aan qaadano waxaa si toos ah kala dagi kartaa pagekan adiga oo ku dhufanaya buttonka kore👆 ee lessons ka </p>
       <p>NB button ka kore ee assignments ku qorantahay waxaad ku soo gudbin doontaan wixii laxiriira assignments ka theory ga ah haday ahaan lahayad by <b>individuals</b> or by <b>groups</b></p>
       <small>wada shaqayn wacan dhamaan.</small>
   </div>
