--- a/Assignments.html
+++ b/Assignments.html
@@ -77,7 +77,7 @@
         </div>
      </footer>
         </div>
-  
+   <script src="main.js" type="text/javascript" charset="utf-8"></script>
   
   </body>
 </html>
