--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
 
   <div class="main">
     <div class="main">
-       <img src="mahad.jpg" alt="" />
+       <img src="Tt.jpg" alt="" />
     </div>
   
    
