--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
   <div class="right">
     <h2 class="title"><span class="about">About us</span></h2>
     <p>We are students of the Jamhuriya University, abbreviated as Just, especially in the Faculty of Computer Applications and Technology Since 2019 we are till in our education, we hope to reach our final goal, wish you all the best, thank you.</p>
-    <small>For more information you can contact social icons in the below.</small>
+    <small>For mor information you can contact social icons in the below.</small>
   </div>
     
   
